--- a/templates/non-public/navbar-view.html
+++ b/templates/non-public/navbar-view.html
@@ -9,7 +9,7 @@
                                 <a href="" >
                                     <img class="img-thumbnail navi-picture" src="" ng-src="{{currentUserprofilepic}}" alt=".."/>
                                 </a>
-                                <span ng-click="goToMyWall(currentUsername)" class="navi-username">{{currentUsername}}</span>
+                                <span ng-click="goToMyWall(currentUsername)" class="navi-username username">{{currentUsername}}</span>
                             </div>
                         </div>
                         <div class="pull-left">
