--- a/templates/non-public/user-pendingFriend-view.html
+++ b/templates/non-public/user-pendingFriend-view.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" ng-controller="userController">
     <div class="col-sm-3">
         <div class="panel panel-default pending-user-container" ng-controller="userController">
             <div ng-repeat="pendingFriend in pendingFriendRequestData">
