--- a/templates/non-public/user-wall-view.html
+++ b/templates/non-public/user-wall-view.html
@@ -2,9 +2,9 @@
 <div class="row">
     <div class="col-sm-12">
         <div class="timeline-container">
-            <img ng-src="{{userWallData.coverImageData}}" alt="timeline" class="user-timeline-image"/>
-            <img ng-src="{{userWallData.profileImageData}}" alt="timeline" class="img-thumbnail user-profile-image"/>
-            <span class="user-wall-fullName">{{userWallData.name}}</span>
+            <img ng-src="{{userWallData.coverImageData}}" alt="timeline" id="wallUser-timeline" class="user-timeline-image"/>
+            <img ng-src="{{userWallData.profileImageData}}" alt="profileImage" id="wallUser-picture" class="img-thumbnail user-profile-image"/>
+            <span class="user-wall-fullName username">{{userWallData.name}}</span>
             <div class="pull-right" ng-if="userWallData.username != currentUsername">
                 <a href="" class="btn btn-success btn-lg" ng-show="userWallData.isFriend === true">Friend</a>
                 <a href="" ng-click="sendFriendRequest(userWallData)" class="btn btn-danger btn-lg" ng-show="userWallData.isFriend === false">Add friend</a>
@@ -20,7 +20,8 @@
                     <a href="" class="thumbnail pull-left">
                         <img alt="img" ng-src="{{feed.author.profileImageData}}"/>
                     </a>
-                    <span class="modal-title">{{feed.author.name}}</span>
+                    <span ng-mouseenter="previewUser(feed)" class="modal-title username">{{feed.author.name}}</span>
+                    <div ng-mouseleave="stopUserPreview()" ng-if="isUserHovered && hoveredPostId == feed.id" ng-include="'templates/non-public/user-preview-view.html'"></div>
                     <div>
                         <span class="modal-posted-date"><strong>Posted at </strong>{{feed.date | date: "dd MMM yyyy 'at' HH:mm:ss"}}</span>
                     </div>
@@ -55,7 +56,10 @@
                 <div class="panel panel-default post-comments-container" ng-repeat="comment in feed.comments">
                     <div class="panel-heading">
                         <img ng-src="{{comment.author.profileImageData}}" class="img-thumbnail comment-user-image" alt="image"/>
-                        <span class="panel-title"><strong>{{comment.author.name}}</strong> posted at {{comment.date | date: "dd/MM/yy HH:mm:ss"}}</span>
+                        <span class="panel-title"><strong  ng-mouseenter="previewUser(comment)" class="username">{{comment.author.name}}</strong>
+                            posted at {{comment.date | date: "dd/MM/yy HH:mm:ss"}}
+                        </span>
+                        <div ng-mouseleave="stopUserPreview()" ng-if="isUserHovered && hoveredPostId == comment.id" ng-include="'templates/non-public/user-preview-view.html'"></div>
                     </div>
                     <div class="panel-body">
                         {{comment.commentContent}}
