--- a/templates/non-public/newsFeed-view.html
+++ b/templates/non-public/newsFeed-view.html
@@ -4,7 +4,70 @@
 
 <div class="row">
     <div class="col-md-8">
-
+        <div class="modal-dialog" ng-repeat="feed in newsFeeds">
+            <div class="modal-content" data-id="{{feed.id}}">
+                <div class="modal-header">
+                    <a href="" class="thumbnail pull-left">
+                        <img alt="img" ng-src="{{feed.author.profileImageData}}"/>
+                    </a>
+                    <span ng-mouseenter="previewUser(feed)" class="modal-title username">{{feed.author.name}}</span>
+                    <div ng-mouseleave="stopUserPreview()" ng-if="isUserHovered && hoveredPostId == feed.id" ng-include="'templates/non-public/user-preview-view.html'"></div>
+                    <div>
+                        <span class="modal-posted-date"><strong>Posted at </strong>{{feed.date | date: "dd MMM yyyy 'at' HH:mm:ss"}}</span>
+                    </div>
+                </div>
+                <div class="modal-body">
+                    <p>{{feed.postContent}}</p>
+                </div>
+                <div class="modal-footer">
+                    <div class="pull-left">
+                        <button type="button" ng-if="feed.liked != true" ng-click="likePost(feed)" class="btn btn-default btn-success btn-vote" data-dismiss="modal">Like
+                            <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+                        </button>
+                        <button type="button" ng-if="feed.liked == true" ng-click="dislikePost(feed)" class="btn btn-default btn-danger btn-vote" data-dismiss="modal">Dislike
+                            <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
+                        </button>
+                        <span class="badge" id="postLikes{{feed.id}}">likes {{feed.likesCount}}</span>
+                    </div>
+                    <form name="commentForm">
+                        <div class="form-group comment-box">
+                            <label class="control-label pull-left" for="inputLarge">Post your comment</label>
+                            <input name="commentField" ng-minlength="2" required ng-model="commentRawContent" class="form-control input-lg" type="text" id="inputLarge">
+                        <span class="label label-danger error" ng-show="commentForm.commentField.$error.minlength">
+                                Min length is 2 letters!
+                        </span>
+                        </div>
+                        <span class="badge">{{feed.comments.length}}</span>
+                        <button ng-disabled="commentForm.$invalid" ng-click="addCommentToPost(feed, commentRawContent)" type="button" id="{{feed.id}}" class="btn btn-primary" >Comment
+                            <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
+                        </button>
+                    </form>
+                </div>
+                <div class="panel panel-default post-comments-container" ng-repeat="comment in feed.comments">
+                    <div class="panel-heading">
+                        <img ng-src="{{comment.author.profileImageData}}" class="img-thumbnail comment-user-image" alt="image"/>
+                        <span class="panel-title"><strong  ng-mouseenter="previewUser(comment)" class="username">{{comment.author.name}}</strong>
+                            posted at {{comment.date | date: "dd/MM/yy HH:mm:ss"}}
+                        </span>
+                        <div ng-mouseleave="stopUserPreview()" ng-if="isUserHovered && hoveredPostId == comment.id" ng-include="'templates/non-public/user-preview-view.html'"></div>
+                    </div>
+                    <div class="panel-body">
+                        {{comment.commentContent}}
+                    </div>
+                    <div class="container-comment-votes">
+                        <div class="pull-right ">
+                            <span class="badge">likes {{comment.likesCount}}</span>
+                            <button type="button" ng-click="likeComment(feed, comment)" ng-hide="comment.liked" class="btn btn-xs btn-success btn-vote-comment" data-dismiss="modal">
+                                <span class="glyphicon glyphicon-thumbs-up" aria-hidden="true"></span>
+                            </button>
+                            <button type="button" ng-click="dislikeComment(feed, comment)" ng-show="comment.liked" class="btn btn-xs btn-danger btn-vote-comment" data-dismiss="modal">
+                                <span class="glyphicon glyphicon-thumbs-down" aria-hidden="true"></span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <div class="col-md-4">
         <div ng-include="'templates/non-public/friends-panel-view.html'"></div>
