--- a/templates/non-public/user-pendingFriend-view.html
+++ b/templates/non-public/user-pendingFriend-view.html
@@ -7,7 +7,7 @@
                         <img ng-src="{{pendingFriend.user.profileImageData}}" alt="friendImage" class="img-thumbnail img-small"/>
                     </div>
                     <div class="pull-right">
-                        <span><strong>{{pendingFriend.user.name}}</strong></span>
+                        <span class="username"><strong ng-click="goToUserWall(pendingFriend.user.username)">{{pendingFriend.user.name}}</strong></span>
                     </div>
                 </div>
                 <div class="row">
