--- a/templates/non-public/navbar-view.html
+++ b/templates/non-public/navbar-view.html
@@ -17,7 +17,7 @@
                                 <li>
                                     <p class="bs-component">
                                         <a href="#/users/feeds" class="btn btn-success btn-sm nav-buttons">
-                                            <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
+                                            <span class="glyphicon glyphicon-apple" aria-hidden="true"></span>
                                         </a>
                                     </p>
                                 </li>
