--- a/templates/non-public/user-wall-view.html
+++ b/templates/non-public/user-wall-view.html
@@ -41,7 +41,7 @@
                         </div>
                         <span class="badge" id="postLikes{{feed.id}}">likes {{feed.likesCount}}</span>
                     </div>
-                    <form name="commentForm">
+                    <form ng-if="feed.wallOwner.isFriend || feed.wallOwner.username == currentUsername" name="commentForm">
                     <div class="form-group comment-box">
                         <label class="control-label pull-left" for="inputLarge">Post your comment</label>
                         <input name="commentField" ng-minlength="2" required ng-model="commentRawContent" class="form-control input-lg" type="text" id="inputLarge">
@@ -50,7 +50,7 @@
                         </span>
                     </div>
                     <span class="badge">total comments {{feed.comments.length}}</span>
-                    <button ng-if="feed.wallOwner.isFriend || feed.wallOwner.username == currentUsername" ng-disabled="commentForm.$invalid" ng-click="addCommentToPost(feed, commentRawContent)" type="button" id="{{feed.id}}" class="btn btn-primary" >Comment
+                    <button ng-disabled="commentForm.$invalid" ng-click="addCommentToPost(feed, commentRawContent)" type="button" id="{{feed.id}}" class="btn btn-primary" >Comment
                         <span class="glyphicon glyphicon-comment" aria-hidden="true"></span>
                     </button>
                     </form>
@@ -84,7 +84,7 @@
         </div>
     </div>
     <div class="col-md-4 postBoxContainer">
-        <form class="form-horizontal" name="feedForm">
+        <form ng-if="wallFeeds[0].wallOwner.isFriend || wallFeeds[0].wallOwner.username == currentUsername" class="form-horizontal" name="feedForm">
             <div>
                 <label for="feedCommentBox">Make post on {{wallFeeds[0].wallOwner.name}}'s wall</label>
             </div>
