--- a/templates/non-public/newsFeed-view.html
+++ b/templates/non-public/newsFeed-view.html
@@ -72,6 +72,7 @@
                         </div>
                     </div>
                 </div>
+                <a href="" ng-if="feed.id != postId" ng-click="showAllComments(feed)" class="btn btn-primary display-all-comments">See all</a>
             </div>
         </div>
     </div>
