--- a/templates/non-public/user-pendingFriend-view.html
+++ b/templates/non-public/user-pendingFriend-view.html
@@ -4,7 +4,7 @@
             <div ng-repeat="pendingFriend in pendingFriendRequestData">
                 <div class="panel-body">
                     <div class="pull-left">
-                        <img ng-src="{{pendingFriend.user.profileImageData}}" alt="friendImage" class="img-thumbnail img-small"/>
+                        <img actual-src="{{pendingFriend.user.profileImageData}}" ng-src="./img/testP.jpg" alt="friendImage" class="img-thumbnail img-small"/>
                     </div>
                     <div class="pull-right">
                         <span class="username"><strong ng-click="goToUserWall(pendingFriend.user.username)">{{pendingFriend.user.name}}</strong></span>
