--- a/templates/non-public/user-preview-view.html
+++ b/templates/non-public/user-preview-view.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default container-user-preview">
     <div class="pull-left">
-        <img ng-src="{{hoveredUserPreviewData.profileImageData}}" alt="img" class="img-thumbnail hoveredUser-image"/>
+        <img actual-src="{{hoveredUserPreviewData.profileImageData}}" ng-src="./img/testP.jpg" alt="img" class="img-thumbnail hoveredUser-image"/>
     </div>
     <div >
         <h4>{{hoveredUserPreviewData.name}}</h4>
