--- a/templates/non-public/user-profile-view.html
+++ b/templates/non-public/user-profile-view.html
@@ -6,7 +6,7 @@
             <div class="col-md-3">
                 <div>
                     <h3 class="profile-image-header">Profile image</h3>
-                    <img class="profile-image img-thumbnail" ng-src="{{ profileData.profileImageData }}" alt="image" />
+                    <img class="profile-image img-thumbnail" actual-src="{{ profileData.profileImageData }}" ng-src="./img/testP.jpg" alt="image" />
                     <div>
                         <p class="text-primary"><strong>Allowed format: .jpg/.png</strong></p>
                         <p class="text-primary"><strong>Limit: 128kb.</strong></p>
@@ -53,7 +53,7 @@
                             <div class="col-lg-5">
                                 <div>
                                     <h3 class="profile-image-header">Timeline image</h3>
-                                    <img ng-src="{{ profileData.coverImageData }}" alt="image" class="profile-timeline"/>
+                                    <img actual-src="{{ profileData.coverImageData }}" ng-src="./img/timelineDefault.jpg" alt="image" class="profile-timeline"/>
                                     <div>
                                         <p class="text-info"><strong>Limit 1024kb.</strong></p>
                                      <span class="btn btn-default btn-file btn-primary">
