--- a/templates/non-public/user-search-view.html
+++ b/templates/non-public/user-search-view.html
@@ -2,7 +2,7 @@
     <tbody>
     <tr class="user-preview" ng-repeat="user in userNames">
         <td class="success">
-            <img class="user-preview-image" ng-src="{{user.profileImageData}}" alt="image"/>
+            <img class="user-preview-image" actual-src="{{user.profileImageData}}" ng-src="./img/testP.jpg" alt="image"/>
             <a href="" ng-click="goToUserWall(user.username)" ng-model="user.username">{{user.name}}</a>
         </td>
     </tr>
