--- a/templates/non-public/friends-panel-view.html
+++ b/templates/non-public/friends-panel-view.html
@@ -5,11 +5,13 @@
                 <h3 class="panel-title">Friends {{ownFriendsCollection.length}} total</h3>
             </div>
             <div class="row">
-                <div ng-repeat="friend in ownFriendsCollection" class="col-md-4 panel-body">
-                    <a href="" ng-click="goToUserWall(friend.username)" class="thumbnail">
-                        <img src="" alt="img" ng-src="{{friend.profileImageData}}" class="friendsProfilePic"/>
-                        <span class="friendsName username">{{friend.name}}</span>
-                    </a>
+                <div ng-repeat="friend in ownFriendsCollection">
+                    <div class="col-md-4 friends-panel-thumb">
+                        <a href="" ng-click="goToUserWall(friend.username)" class="thumbnail">
+                            <img alt="img" actual-src="{{friend.profileImageData}}" ng-src="./img/testP.jpg" class="friendsProfilePic"/>
+                            <span class="friendsName username">{{friend.name}}</span>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
