--- a/templates/non-public/navbar-view.html
+++ b/templates/non-public/navbar-view.html
@@ -7,7 +7,7 @@
                         <div class="navbar-header">
                             <div class="profile-image-thumb">
                                 <a href="" >
-                                    <img class="img-thumbnail navi-picture" src="" ng-src="{{currentUserprofilepic}}" alt=".."/>
+                                    <img class="img-thumbnail navi-picture" actual-src="{{currentUserprofilepic}}" ng-src="./img/testP.jpg" alt="img"/>
                                 </a>
                                 <span ng-click="goToMyWall(currentUsername)" class="navi-username username">{{currentUsername}}</span>
                             </div>
