--- a/templates/non-public/user-wall-view.html
+++ b/templates/non-public/user-wall-view.html
@@ -2,8 +2,8 @@
 <div class="row">
     <div class="col-sm-12">
         <div class="timeline-container">
-            <img ng-src="{{userWallData.coverImageData}}" alt="timeline" id="wallUser-timeline" class="user-timeline-image"/>
-            <img ng-src="{{userWallData.profileImageData}}" alt="profileImage" id="wallUser-picture" class="img-thumbnail user-profile-image"/>
+            <img actual-src="{{userWallData.coverImageData}}" ng-src="./img/timelineDefault.jpg" alt="timeline" id="wallUser-timeline" class="user-timeline-image"/>
+            <img actual-src="{{userWallData.profileImageData}}" ng-src="./img/testP.jpg" alt="profileImage" id="wallUser-picture" class="img-thumbnail user-profile-image"/>
             <span class="user-wall-fullName username">{{userWallData.name}}</span>
             <div class="pull-right" ng-if="userWallData.username != currentUsername">
                 <a href="" class="btn btn-success btn-lg disabled" ng-show="userWallData.isFriend === true">Friend</a>
@@ -19,7 +19,7 @@
                 <div class="modal-header">
                     <button ng-if="feed.author.username === currentUsername" ng-controller="postController" type="button" ng-click="deletePost(feed)" class="close" data-dismiss="modal" aria-hidden="true">x</button>
                     <a href="" class="thumbnail pull-left">
-                        <img alt="img" ng-src="{{feed.author.profileImageData}}"/>
+                        <img alt="img" actual-src="{{feed.author.profileImageData}}" ng-src="./img/testP.jpg"/>
                     </a>
                     <span ng-mouseenter="previewUser(feed)" ng-click="goToUserWall(feed.author.username)" class="modal-title username">{{feed.author.name}}</span>
                     <div ng-mouseleave="stopUserPreview()" ng-if="isUserHovered && hoveredPostId == feed.id" ng-include="'templates/non-public/user-preview-view.html'"></div>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="panel panel-default post-comments-container" ng-repeat="comment in feed.comments">
                     <div class="panel-heading">
-                        <img ng-src="{{comment.author.profileImageData}}" class="img-thumbnail comment-user-image" alt="image"/>
+                        <img actual-src="{{comment.author.profileImageData}}" ng-src="./img/testP.jpg" class="img-thumbnail comment-user-image" alt="image"/>
                         <span class="panel-title"><strong ng-click="goToUserWall(comment.author.username)" ng-mouseenter="previewUser(comment)" class="username">{{comment.author.name}}</strong>
                             posted at {{comment.date | date: "dd/MM/yy HH:mm:ss"}}
                         </span>
