--- a/templates/non-public/user-profile-view.html
+++ b/templates/non-public/user-profile-view.html
@@ -6,9 +6,9 @@
             <div class="col-md-3">
                 <div>
                     <h3 class="profile-image-header">Profile image</h3>
-                    <img class="profile-image img-thumbnail" actual-src="{{ profileData.profileImageData }}" ng-src="./img/testP.jpg" alt="image" />
+                    <img class="profile-image img-thumbnail" actual-src="{{ currentUserprofilepic }}" ng-src="./img/testP.jpg" alt="image" />
                     <div>
-                        <p class="text-primary"><strong>Allowed format: .jpg/.png</strong></p>
+                        <p class="text-primary"><strong>Allowed format: .jpg</strong></p>
                         <p class="text-primary"><strong>Limit: 128kb.</strong></p>
                         <span class="btn btn-default btn-file btn-primary">
                             Upload <input type="file" ng-model="profileData.profileImageData" accept="image/*" app-filereader />
