--- a/templates/non-public/newsFeed-view.html
+++ b/templates/non-public/newsFeed-view.html
@@ -2,7 +2,7 @@
 
 <div ng-init="pageHeader='News Feeds'" ng-include="'templates/non-public/page-header-view.html'"></div>
 
-<div class="row">
+<div class="row items">
     <div class="col-md-8">
         <div class="modal-dialog" ng-repeat="feed in newsFeeds">
             <div class="modal-content" data-id="{{feed.id}}">
